style/projectsComponents/main.css
.projects {
  display: flex;
  flex-direction: column;
  align-items: center;
  height: 100%;
}
.videoDescription {
  display: flex;
  flex-direction: column;
  align-items: center;
}

.description {
  width: 80%;
  display: flex;
  align-items: center;
  justify-content: space-around;
}

.domain {
  margin: 7px;
  color: red;
}

.github {
  margin: 0;
}

.lists h4 {
  text-align: start;
}

.bar {
  width: 70%;
  border: 1px red solid;
  background-color: red;
}

ul {
  list-style-type: none;
  margin-left: 0;
  padding-left: 0;
}
ul li {
  text-align: start;
}

a {
  color: white;
}
a:hover {
  color: red;
}

@keyframes colorChange {
  0% {
    color: white;
  }
  50% {
    color: red;
  }
  100% {
    color: white;
  }
}

.project-live {
  margin: 0 0 1em 0;
}
.project-live a {
  text-decoration: none;
}

.project-live a span {
  color: white;
  display: inline-block;
  -webkit-animation: colorChange 3s forwards infinite;
  animation: colorChange 3s forwards infinite;
  -webkit-animation-delay: calc(0.1s * var(--i));
  animation-delay: calc(0.1s * var(--i));
  -webkit-transition: color 7s;
  transition: color 7s;
  transform: translateZ(0);
}

@media only screen and (max-width: 1055px) {
  .projects {
    align-items: center;
  }

  .project-live a span {
    font-size: 1em;
  }

  .domain {
    font-size: 1.5em;
  }

  .github {
    font-size: 0.7em;
  }

  .videoDescription h3 {
    font-size: 1em;
  }

  .description {
    font-size: 0.8em;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    width: 100%;
  }

  .description h4 {
    text-align: center;
    font-size: 0.7em;
  }

  ul li {
    font-size: 0.7em;
  }

  video#video1 {
    width: 100%;
  }

  video#video2 {
    width: 97%;
  }
  video#video3 {
    width: 97%;
  }

  video#video4 {
    width: 97%;
  }

  video#video5 {
    width: 97%;
  }
}

@media only screen and (max-width: 500px) {
  .project-live a span {
    font-size: 0.7em;
  }
}

@media only screen and (max-width: 420px) {
  .project-live a span {
    font-size: 0.6em;
  }
}

